# handel-register-to-md

./: .gitignore  README.md  config.py  diagnose_page.py  pdf_extractor.py  pdf_scraper.py  pipeline.py  prompt.py  pyproject.toml  requirements.txt  scraper_working.py  test_all_formats.py  test_client_documents.py  test_hra_company.py  test_hra_only.py  test_registration_matching.py
scraper/: README.md  __init__.py
scraper/hr_scraper/: README.md  __init__.py  app.py  browser_manager.py  cli.py  company_matcher.py  config.py  data_extractor.py  exceptions.py  file_manager.py  logger.py  main.py  models.py  navigator.py  pdf_extractor.py
