[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scraper"
version = "0.1.0"
description = "Collection of web scrapers including German Handelsregister scraper"
readme = "scraper/README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.54.0",
    "pdfplumber>=0.11.7",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
hr-scraper = "scraper.hr_scraper.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/scraper"
Repository = "https://github.com/yourusername/scraper"
Issues = "https://github.com/yourusername/scraper/issues"

[tool.hatch.build.targets.wheel]
packages = ["scraper"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
